AG-9609 fix filtering log styles
Merge in EXTENSIONS/browser-extension from fix/AG-9609 to feature/AG-2737

Squashed commit of the following:

commit 4627a609d6480dc7119464cec605958c1ca6a6f6
Merge: 6f07c9b3d 5e3871c41
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Aug 16 15:47:02 2021 +0300

    Merge branch 'feature/AG-2737' into fix/AG-9609

commit 6f07c9b3dbda211424f8842bcba3b332f717a6ef
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Aug 16 14:14:00 2021 +0300

    fix filtering log styles

--- a/Extension/src/pages/common/components/Editor/editor.pcss
+++ b/Extension/src/pages/common/components/Editor/editor.pcss
@@ -205,7 +205,7 @@
             background-color: var(--gray300)!important;
 
             @media (prefers-color-scheme: dark) {
-                background-color: var(--darkBlue-editor)!important;
+                background-color: var(--blueDark-editor)!important;
             }
         }
 
@@ -354,7 +354,7 @@
         & .ace_support.ace_type {
             color: var(--orange-editor)!important;
         }
-    
+
         & .ace_support.ace_constant {
             color: var(--orange-editor)!important;
         }
@@ -381,7 +381,7 @@
             }
 
             & .ace_selection {
-                background-color: var(--darkBlue-editor)!important;
+                background-color: var(--blueDark-editor)!important;
             }
         }
     }
